# SRT_subtitles

./: CMakeLists.txt  README.md  SRT_tests.cpp  Subtitle.cpp  Subtitle.h  SubtitleParser.cpp  SubtitleParser.h  SubtitleParserTest.cpp  SubtitleProcessor.cpp  SubtitleProcessor.h  SubtitleProcessorTest.cpp  SubtitleTest.cpp  Time.cpp  Time.h  TimeTest.cpp  main.cpp
